# MotionPlanHomework

./: README.md
L2/: homework.md
L2/src/grid_path_searcher/include/: Astar_searcher.h  node.h
L2/src/grid_path_searcher/launch/: demo.launch
L2/src/grid_path_searcher/launch/rviz_config/: demo.rviz  jps_demo.rviz
L2/src/grid_path_searcher/src/: Astar_searcher.cpp  demo_node.cpp
L2/src/grid_path_searcher/src/read_only/: JPS_searcher.cpp
L3/: homework.md
L3/src/map_gen/map_generator/: CMakeLists.txt
L3/src/path_finder/include/path_finder/: rrt_star.h  sampler.h
L4/: homework.md
L4/src/grid_path_searcher/include/: hw_tool.h
L4/src/grid_path_searcher/src/: demo_node.cpp  hw_tool.cpp
L5/: homework.md
L5/src/src/: click_gen.cpp
L6/: homework.md
L6/src/mpc_car/config/: mpc_car.yaml
L6/src/mpc_car/include/iosqp/: iosqp.hpp
L6/src/mpc_car/include/mpc_car/: mpc_car.hpp
L6/src/mpc_car/src/: mpc_car_nodelet.cpp
project/: homework.md
project/src/: homework.md
project/src/read_only/Utils/odom_visualization/src/: odom_visualization.cpp
project/src/read_only/Utils/traj_server/: CMakeLists.txt
project/src/read_only/Utils/traj_server/src/: traj_server.cpp
project/src/read_only/map_server/map_generator/: CMakeLists.txt
project/src/read_only/map_server/map_render/: CMakeLists.txt
project/src/read_only/map_server/map_render/src/: pcl_render_node.cpp
project/src/read_only/quadrotor_simulator/so3_control/src/: so3_control_nodelet.cpp
project/src/trajectory_generator/: CMakeLists.txt
project/src/trajectory_generator/include/: Astar_searcher.h  osqp++.h  trajectory_generator_waypoint.h
project/src/trajectory_generator/launch/rviz_config/: demo.rviz
project/src/trajectory_generator/src/: Astar_searcher.cpp  osqp++.cpp  trajectory_generator_node.cpp  trajectory_generator_waypoint.cpp
